@@ -1,4 +1,4 @@
 module Diakonos
   VERSION       = '0.8.10'
-  LAST_MODIFIED = 'June 9, 2009'
+  LAST_MODIFIED = 'June 10, 2009'
 end
